# local-ecs-api

./: .actrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  install.sh  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.github/workflows/: build.yml  tests.yml
diagram/: dac.py
local_ecs_api/: converters.py  docker-compose.local-endpoint.aws_creds.yml  docker-compose.local-endpoint.yml  exceptions.py  main.py  models.py
tests/: conftest.py  data.py
tests/e2e/: .env  conftest.py  docker-compose.aws-creds.yml  docker-compose.creds-env-vars.yml  docker-compose.creds-volume.yml  docker-compose.yml  test_api.py
tests/e2e/mock_aws_creds/: config  credentials
tests/integration/: test_main.py
tests/unit/: test_converters.py
